[ADD] send otp handler
